# ai-handwriting-generator

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  generate.py  main.py  pyproject.toml  requirements.txt  run_train.sh  runpod_setup.sh  train_transformer.py
app/: models.py  priming.py  routes.py  test.py
app/api/: generate.py  jobs.py  styles.py
app/core/: config.py  session.py  singletons.py
app/services/: cleanup.py  generation.py  job_store.py
app/static/css/: main.css
app/static/js/: generate.js  studio.js
app/static/uploads/b7f632de-3cd3-49ee-840a-0371b478615a/: style.npy
app/templates/: base.html  draw.html  generate.html  index.html  login.html  profile.html  signup.html
docs/superpowers/specs/: 2026-03-11-dual-theme-design.md  2026-03-11-transformer-style-vae-design.md
hand_gen_env/: pyvenv.cfg
models/: models.py  transformer_synthesis.py
tests/: _helpers.py  test_cholesky_sampling.py  test_generate_adapter.py  test_generate_api.py  test_job_store.py  test_singletons.py  test_styles_api.py  test_train_transformer.py  test_transformer_model.py
utils/: dataset.py
