[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hand-magic"
version = "1.0.0"
description = "Hand Magic — retro-synth handwriting synthesis web app powered by LSTM + GMM"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Omar Musayev" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "Pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "models*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
